= Runt Changelog

== Version 0.7.0

* Added tests and fixed broken to_s method in AfterTE and BeforeTE

* Applied patch contributed by Justin Cunningham for optimizing performance of the TExprUtils#max_day_of_month method - source is taken verbatim from ActiveSupport::CoreExtensions::Time::Calculations::ClassMethods module days_in_month method

* Changed runttest.rb to use local Time so test doesn't fail when run from another time zone

* Fixed usage of deprecated methods in Date when accessing them from PDate subclass 

* Applied patches providing week precision and expanded RFC2445 compliance tests contributed by Larry Karnowski

* Fixed bug #19982: REYear will match day in any month if @same_month_dates_provided with patch submitted by Riley Lynch

== Version 0.6.0

* Refactored and improved temporal expression tests, moving them to separate files per class

* Fixed bug #5741: REYear incorrect handling of default args

* Fixed bug #5749: Fixed spans midnight for REDay (Revision 156), changed semantics when dealing with lower precision arguments

* Fixed bug #10640: incorrect tutorial section for tutorial_te.rdoc

* Fixed bug #10605: DateRange.empty? should be true for min == max

* Finished Schedule API tutorial

* Fixed bug #16143: Typo in Schedule RDoc

* Added README (and related files) in the generated rdoc

== Version 0.5.0

* Refactored Schedule implementation which greatly simplifies customization but does potentially break existing clients who relied on the ability to call add mulitple times (SEE BELOW)

* Added update method to Schedule allowing clients to update existing expressions

* Added select method to Schedule allowing clients to query Events using arbitrary criteria   

* Added events method to Schedule which returns an Array of the currrently held Events   

* Added time-related shortcuts to Runt module contributed by Ara T. Howard

* Added ability to work with Time class contributed by Paul Wright
