@@ -3,7 +3,8 @@
 require 'runt'
 
 module Runt
-  ORDINALS = ['first', 'second', 'third', 'fourth', 'last','second_to_last']
+  DAYS = '(sunday|monday|tuesday|wednesday|thursday|friday|saturday)'
+  ORDINALS = '(first|second|third|fourth|last|second_to_last)'
   class << self 
     def const(string)
       self.const_get(string.capitalize)
@@ -18,19 +19,20 @@ module Runt
   end
 
   def build(name, *args, &block)
-    days = '(monday|tuesday|wednesday|thursday|friday|saturday|sunday)'
-    ordinals = '(first|second|third|fourth|last|second_to_last)'
     case name.to_s
     when /^(daily_)(\d{1,2})_(\d{2})([ap]m)_to_(\d{1,2})_(\d{2})([ap]m)$/
       st_hr, st_min, st_m, end_hr, end_min, end_m = $2, $3, $4, $5, $6, $7
       args = parse_time(st_hr, st_min, st_m)
       args.concat(parse_time(end_hr, end_min, end_m))
       return REDay.new(*args)
-    when Regexp.new('^' + days + '$')
+    when Regexp.new('^' + DAYS + '$')
       return DIWeek.new(Runt.const(name.to_s))
-    when Regexp.new(ordinals + '_' + days)
+    when Regexp.new(ORDINALS + '_' + DAYS)
       ordinal, day = $1, $2
       return DIMonth.new(Runt.const(ordinal), Runt.const(day))
+    when Regexp.new('^weekly_' + DAYS + '_to_' + DAYS + '$')
+      st_day, end_day = $1, $2
+      return REWeek.new(Runt.const(st_day), Runt.const(end_day))
     end
   end
 
